# InSituPREP

./: .gitignore  LICENSE  README.md  pyproject.toml
ExSeq_data/: genes_names.txt  marker_genes_by_tissue.json
ExSeq_data/RNA_velocity/: PCs_origin_counts_spliced.csv  counts_spliced.csv  counts_unspliced.csv  ground_truth_genes.txt
ExSeq_data/marker_genes/: markers_deseq_exseq_combined_313.csv  markers_deseq_exseq_combined_330.csv  markers_deseq_exseq_combined_364.csv  markers_deseq_exseq_combined_514.csv  markers_deseq_exseq_combined_6tissues.csv  markers_deseq_exseq_combined_783.csv  markers_deseq_exseq_combined_880.csv  markers_deseq_exseq_combined_982.csv
docs/: README_bacteria_objects.md  README_comparison_across_platforms_and_patients.md  README_deseq_proximity.md  README_dispersion_in_pca_space.md  README_expression_as_function_of_distance.md  README_nbrs_count_regression.md  README_rna_velocity.md  README_triplet_cell_interaction.md
src/insituprep/: __main__.py  cli.py
src/insituprep/analyses/: bacteria_objects.py  comparison_across_platforms_and_patients.py  deseq_proximity.py  dispersion_in_pca_space.py  expression_as_function_of_distance.py  nbrs_count_regression.py  rna_velocity_stage1.py  rna_velocity_stage2.py  triplet_cell_interaction.py
src/insituprep/cli_commands/: bacteria_objects.py  comparison_across_platforms.py  deseq_proximity.py  dispersion_pca.py  expression_as_function_of_distance.py  nbrs_count_regression.py  nbrs_count_regression_cli.py  rna_velocity_app.py  triplet_cell_interaction.py
