[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insituprep"
version = "0.1.0"
description = "Run multiple spatial analyses from the terminal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  {name = "Tal Goldberg"}
]
dependencies = [
  "typer>=0.12",
  "pandas>=2.0",
  "numpy>=1.24",
  "statsmodels>=0.14",
  "pydeseq2==0.5.4",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "adjustText>=1.1.1",
  "scipy>=1.17.0"
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]


[project.scripts]
insituprep = "insituprep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
